fix menu position and align the segments

--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,9 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: -8px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* navigation styles */
@@ -27,6 +30,10 @@ a {
     font-weight: bold;
     font-size: small;
 }
+
+.link {
+    color: #2d801b; 
+ }
 
 header {
     height: 55px;
@@ -60,8 +67,6 @@ header {
 
 footer {
     background-color: #171717;
-    position: absolute;
     text-align: center;
-    width: 100%;
     color: white;
 }
