--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,15 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: -8px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* navigation styles */
 
 nav {
     text-align: center;
-    width: 100%;
 }
 
 ul {
@@ -28,16 +30,28 @@ a {
     font-size: small;
 }
 
+.link {
+   color: #2d801b; 
+}
+
 header {
-    height: 55px;
-    display: flex;
-    justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.9); 
+    transition: background-color 0.3s ease; 
+    z-index: 1000;
+}
+
+header.scroll {
+    background-color: rgba(255, 255, 255, 1); /* Fully opaque background when scrolling down */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow effect */
 }
 
 /* section #1: about us */
 
 button {
-    color: black;
+    color: white;
     background-color: #2d801b;
     height: 60px;
     font-size: 16px;
@@ -47,6 +61,7 @@ button {
     font-weight: bold;
     cursor: pointer;
     border-radius: 30px;
+    border: none;
     margin-top: 60px;
     margin-left: 100px;
 }
@@ -87,6 +102,7 @@ strong {
 
 section {
     background-color: #f2f2f2;
+    margin-top: 50px;
 }
 
 /* section #2: workers */
@@ -96,12 +112,15 @@ section {
 .workers {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 h2 {
     font-size: 40px;
     margin-bottom: 90px;
+    text-align: center;
 }
 
 h3 {
@@ -127,29 +146,27 @@ h3 {
 
 .prev,
 .next {
-  cursor: pointer;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: #2d801b;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
+    cursor: pointer;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: #2d801b;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
+}
 
 /* footer */
 
 footer {
     background-color: #171717;
-    position: absolute;
     text-align: center;
-    width: 100%;
     color: white;
 }
