--- a/css/services.css
+++ b/css/services.css
@@ -2,13 +2,15 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: -8px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* navigation styles */
 
 nav {
     text-align: center;
-    width: 100%;
 }
 
 ul {
@@ -28,10 +30,22 @@ a {
     font-size: small;
 }
 
+.link {
+   color: #2d801b; 
+}
+
 header {
-    height: 55px;
-    display: flex;
-    justify-content: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.9); 
+    transition: background-color 0.3s ease; 
+    z-index: 1000;
+}
+
+header.scroll {
+    background-color: rgba(255, 255, 255, 1); /* Fully opaque background when scrolling down */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow effect */
 }
 
 /* main */
@@ -40,6 +54,7 @@ header {
 
 main {
     background-color: #f2f2f2;
+    margin-top: 55px;
 }
 
 h1 {
@@ -76,8 +91,6 @@ h1 {
 
 footer {
     background-color: #171717;
-    position: absolute;
     text-align: center;
-    width: 100%;
     color: white;
 }
